@@ -20,7 +20,7 @@
                                 <div class="input-group-prepend" style="width: 120px">
                                     <span>Product name*</span>
                                 </div>
-                                <input name="name" class="form-control form-control-sm" autocomplete="off" formControlName="name" tabIndex="2" />
+                                <input name="name" class="form-control form-control-sm" autocomplete="off" formControlName="name" />
                             </div>
                         </div>
                         <div class="ws-input">
@@ -37,7 +37,7 @@
                                         </ng-container>
                                     </mat-select>
                                 </div>
-                                <input name="price" autocomplete="off" tabIndex="2" class="form-control form-control-sm p-1" lang="en-150" placeholder="0.00" formControlName="price" />
+                                <input name="price" autocomplete="off" class="form-control form-control-sm p-1" lang="en-150" placeholder="0.00" formControlName="price" />
                             </div>
                         </div>
                         <div class="ws-input">
@@ -57,7 +57,7 @@
                                 <div class="input-group-prepend" style="width: 120px" title="Stock keeping unit">
                                     <span>SKU</span>
                                 </div>
-                                <input class="form-control form-control-sm" placeholder="A unique ID for you to easily find the item" autocomplete="off" name="refId" formControlName="refId" tabIndex="1" />
+                                <input class="form-control form-control-sm" placeholder="A unique ID for you to easily find the item" autocomplete="off" name="refId" formControlName="refId" />
                             </div>
                         </div>
                         <div class="ws-input">
@@ -65,7 +65,7 @@
                                 <div class="input-group-prepend" style="width: 120px">
                                     <span>Discount (%)</span>
                                 </div>
-                                <input name="discount" autocomplete="off" tabIndex="2" class="form-control form-control-sm p-1" lang="en-150" placeholder="0.00%" formControlName="discount" />
+                                <input name="discount" autocomplete="off" class="form-control form-control-sm p-1" lang="en-150" placeholder="0.00%" formControlName="discount" />
                             </div>
                         </div>
                         <div *ngIf="false" class="ws-input">
@@ -73,7 +73,7 @@
                                 <div class="input-group-prepend" style="width: 120px">
                                     <span>Weight (kg)</span>
                                 </div>
-                                <input name="weight" autocomplete="off" tabIndex="2" class="form-control form-control-sm p-1" lang="en-150" placeholder="0.0" formControlName="weight" />
+                                <input name="weight" autocomplete="off" class="form-control form-control-sm p-1" lang="en-150" placeholder="0.0" formControlName="weight" />
                             </div>
                         </div>
                         <div *ngIf="false" class="ws-input">
@@ -81,7 +81,7 @@
                                 <div class="input-group-prepend" style="width: 120px">
                                     <span>Quantity</span>
                                 </div>
-                                <input name="quantity" autocomplete="off" tabIndex="2" class="form-control form-control-sm p-1" lang="en-150" formControlName="quantity" />
+                                <input name="quantity" autocomplete="off" class="form-control form-control-sm p-1" lang="en-150" formControlName="quantity" />
                             </div>
                         </div>
                         <div *ngIf="false" class="ws-input">
@@ -89,7 +89,7 @@
                                 <div class="input-group-prepend" style="width: 120px">
                                     <span>Brand</span>
                                 </div>
-                                <input class="form-control form-control-sm" tabIndex="2" placeholder="Default: No Brand" formControlName="brand" />
+                                <input class="form-control form-control-sm" placeholder="Default: No Brand" formControlName="brand" />
                             </div>
                         </div>
                         <div *ngIf="false" class="ws-input">
@@ -97,11 +97,11 @@
                                 <div class="input-group-prepend" style="width: 120px">
                                     <span>Warranty</span>
                                 </div>
-                                <input class="form-control form-control-sm" tabIndex="2" placeholder="Default: No Warranty" formControlName="warranty" />
+                                <input class="form-control form-control-sm" placeholder="Default: No Warranty" formControlName="warranty" />
                             </div>
                         </div>
                         <div class="ws-input mb-3">
-                          <textarea class="form-control form-control-sm" maxlength="256" autocomplete="off" name="description" tabIndex="2" placeholder="Description" style="resize:none" formControlName="description" rows='4'></textarea>
+                          <textarea class="form-control form-control-sm" maxlength="256" autocomplete="off" name="description" placeholder="Description" style="resize:none" formControlName="description" rows='4'></textarea>
                         </div>
                         <div *ngIf="false" class="row no-gutters mb-2" style="flex-wrap: nowrap;">
                             <button type="button" class="btn-item-upload mr-1" onclick="document.getElementById('itemDescriptionUpload').click();">
