@@ -9,18 +9,10 @@
                     <ng-container *ngIf="!loading.isRunning() else loadingTemplate">
                         <div class="ws-input">
                             <div class="input-group">
-                                <div class="input-group-prepend" style="width: 120px" title="Stock keeping unit">
-                                    <span>ID*</span>
-                                </div>
-                                <input class="form-control form-control-sm" placeholder="A unique ID for you to easily find the item" autocomplete="off" name="refId" formControlName="refId" tabIndex="1" />
-                            </div>
-                        </div>
-                        <div class="ws-input">
-                            <div class="input-group">
                                 <div class="input-group-prepend" style="width: 120px">
                                     <span>Product name*</span>
                                 </div>
-                                <input name="name" class="form-control form-control-sm" autocomplete="off" formControlName="name" tabIndex="2" />
+                                <input name="name" class="form-control form-control-sm" autocomplete="off" formControlName="name" />
                             </div>
                         </div>
                         <div class="ws-input">
@@ -36,7 +28,7 @@
                                         </ng-container>
                                     </mat-select>
                                 </div>
-                                <input name="price" autocomplete="off" tabIndex="2" class="form-control form-control-sm p-1" lang="en-150" placeholder="0.00" formControlName="price" />
+                                <input name="price" autocomplete="off" class="form-control form-control-sm p-1" lang="en-150" placeholder="0.00" formControlName="price" />
                             </div>
                         </div>
                         <div class="ws-input mb-3">
@@ -49,14 +41,25 @@
                                 </mat-select>
                             </div>
                         </div>
-
+                        <div class="text-center mt-1 mb-1" style="overflow: hidden">
+                            <span id="continueSpan" class="p-2 position-relative">
+                                <span class="innerSpan">
+                                    <span>Optional</span>
+                                </span>
+                            </span>
+                        </div>
+                        <div class="ws-input mb-3">
+                            <div class="input-group">
+                                <div class="input-group-prepend" style="width: 120px" title="Stock keeping unit">
+                                    <span>SKU</span>
+                                </div>
+                                <input class="form-control form-control-sm" placeholder="A unique ID for you to easily find the item" autocomplete="off" name="refId" formControlName="refId" />
+                            </div>
+                        </div>
                         <div>
                             <h6>Types<span class="d-inline-block fas fa-plus float-right clickable" style="color:#505f79;" (click)="openTypeField()"></span></h6>
                             <div class="type-container">
                                 <div class="py-1" cdkDropList (cdkDropListDropped)="dropType($event)">
-                                    <div class="type-item row no-gutters default">
-                                        <ng-container *ngTemplateOutlet="itemTypeTemplate; context: {type: defaultType}"></ng-container>
-                                    </div>
                                     <div *ngFor="let type of allTypes">
                                         <div class="type-item row no-gutters" cdkDrag>
                                             <ng-container *ngTemplateOutlet="itemTypeTemplate; context: {type: type}"></ng-container>
@@ -155,7 +158,7 @@
                                     <div class="input-group-prepend" style="width: 120px">
                                         <span>Discount (%)</span>
                                     </div>
-                                    <input name="discount" autocomplete="off" tabIndex="2" class="form-control form-control-sm p-1" lang="en-150" placeholder="0.00" formControlName="discount" />
+                                    <input name="discount" autocomplete="off" class="form-control form-control-sm p-1" lang="en-150" placeholder="0.00" formControlName="discount" />
                                     <div class="input-group-append input-group-sm">
                                         <mat-checkbox title="Mark as discount item" [color]="'primary'" class="input-group-text border-0" formControlName="isOffer"></mat-checkbox>
                                     </div>
@@ -166,7 +169,7 @@
                                     <div class="input-group-prepend" style="width: 120px">
                                         <span>Weight (kg)</span>
                                     </div>
-                                    <input name="weight" autocomplete="off" tabIndex="2" class="form-control form-control-sm p-1" lang="en-150" placeholder="0.0" formControlName="weight" />
+                                    <input name="weight" autocomplete="off" class="form-control form-control-sm p-1" lang="en-150" placeholder="0.0" formControlName="weight" />
                                 </div>
                             </div>
                             <div *ngIf="false" class="ws-input">
@@ -174,7 +177,7 @@
                                     <div class="input-group-prepend" style="width: 120px">
                                         <span>Quantity</span>
                                     </div>
-                                    <input name="quantity" autocomplete="off" tabIndex="2" class="form-control form-control-sm p-1" lang="en-150" formControlName="quantity" />
+                                    <input name="quantity" autocomplete="off" class="form-control form-control-sm p-1" lang="en-150" formControlName="quantity" />
                                 </div>
                             </div>
                             <div *ngIf="false" class="ws-input">
@@ -182,7 +185,7 @@
                                     <div class="input-group-prepend" style="width: 120px">
                                         <span>Brand</span>
                                     </div>
-                                    <input class="form-control form-control-sm" tabIndex="2" placeholder="Default: No Brand" formControlName="brand" />
+                                    <input class="form-control form-control-sm" placeholder="Default: No Brand" formControlName="brand" />
                                 </div>
                             </div>
                             <div *ngIf="false" class="ws-input">
@@ -190,11 +193,11 @@
                                     <div class="input-group-prepend" style="width: 120px">
                                         <span>Warranty</span>
                                     </div>
-                                    <input class="form-control form-control-sm" tabIndex="2" placeholder="Default: No Warranty" formControlName="warranty" />
+                                    <input class="form-control form-control-sm" placeholder="Default: No Warranty" formControlName="warranty" />
                                 </div>
                             </div>
                             <div class="ws-input mb-3">
-                                <textarea class="form-control form-control-sm" maxlength="256" autocomplete="off" name="description" tabIndex="2" placeholder="Description" style="resize:none" formControlName="description" rows='4'></textarea>
+                                <textarea class="form-control form-control-sm" maxlength="256" autocomplete="off" name="description" placeholder="Description" style="resize:none" formControlName="description" rows='4'></textarea>
                             </div>
                             <div *ngIf="false" class="row no-gutters mb-2" style="flex-wrap: nowrap;">
                                 <button type="button" class="btn-item-upload mr-1" onclick="document.getElementById('itemDescriptionUpload').click();">
@@ -233,13 +236,13 @@
                             <div class="col-lg-6">
                                 <div class="input-group" style="flex-wrap: nowrap">
                                     <mat-checkbox [color]="'primary'" class="mr-1" formControlName="isEntityNew">
+                                        Mark as new
                                     </mat-checkbox>
-                                    Mark as new
                                 </div>
                                 <div class="input-group" style="flex-wrap: nowrap">
                                     <mat-checkbox [color]="'primary'" class="mr-1" formControlName="isPublished">
+                                        Mark as published
                                     </mat-checkbox>
-                                    Mark as published
                                 </div>
                             </div>
                         </div>
