@@ -10,6 +10,7 @@
 .: WSM: Task: Add input label in customers (WSM-253)
 .: WSM: Task: Add input label in promotions (WSM-252)
 .: WSM: BugFix: Set malaysia as default country (WSM-253)
+.: WSM: Task: Category select all by default when open modify invoice modal (WSM-250)
 
 ---------------------------------------------
 - 2021-01-01                                -
